fix grid-gap

--- a/src/components/CardHolder/CardHolder.module.scss
+++ b/src/components/CardHolder/CardHolder.module.scss
@@ -13,7 +13,7 @@
   .containerCards {
   margin: 100px 50px;
   display: grid;
-  grid-gap: 10px;
+  gap: 40px 60px;
   grid-template-columns: repeat( auto-fit, minmax(200px, 1fr) );
   grid-template-rows: repeat(1, minmax(100px, 1fr));
   grid-auto-flow: dense;
